<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_title_screen_danmakuPref" android:key="@string/pref_key_screen_danmakuPref" android:summary="@string/pref_summary_screen_danmakuPref"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:danmaku="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_title_danmaku_block_mode">
        <Preference android:persistent="false" android:title="@string/pref_title_danmaku_block_settings" android:key="@string/pref_key_danmaku_block_settings" android:defaultValue="@null">
            <intent android:targetPackage="@string/package_name" android:action="android.intent.action.VIEW" android:targetClass="tv.danmaku.bili.ui.danmakufilter.DanmakuBlockActivity" />
        </Preference>
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_title_danmaku_hide_by_default" android:key="@string/pref_key_danmaku_hide_by_default" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_title_danmaku_style">
        <tv.danmaku.bili.widget.preference.BLListPreference android:persistent="true" android:entries="@array/DanmakuTextStyleEntries" android:title="@string/pref_title_danmaku_text_style" android:key="@string/pref_key_danmaku_text_style" android:defaultValue="-1" android:entryValues="@array/DanmakuTextStyleValues" />
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_title_DFM_HardwareAcc" android:key="@string/pref_key_DFM_HardwareAcc" android:defaultValue="true" android:summaryOn="@string/pref_summaryOn_DFM_HardwareAcc" android:summaryOff="@string/pref_summaryOff_DFM_HardwareAcc" />
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_title_danmaku_Monospaced" android:key="@string/pref_key_danmaku_Monospaced" android:summary="@string/pref_summary_danmaku_Monospaced" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_title_danmaku_style_bold" android:key="@string/pref_key_danmaku_style_bold" android:summary="@string/pref_summary_danmaku_style_bold" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>