<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_title_preferences" android:key="@string/pref_key_preferences" android:summary="@string/pref_summary_preferences"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:danmaku="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_title_category_play">
        <tv.danmaku.bili.widget.preference.BLListPreference android:persistent="true" android:entries="@array/pref_player_mediaSource_entries" android:title="@string/pref_title_mediaSource" android:key="@string/pref_player_mediaSource_key" android:defaultValue="0" android:entryValues="@array/pref_player_mediaSource_entryValues" danmaku:blEntrySummaries="@array/pref_player_mediaSource_summaries" />
        <tv.danmaku.bili.widget.preference.BLListPreference android:persistent="true" android:entries="@array/pref_player_completionAction_entries" android:title="@string/pref_title_completeAction" android:key="@string/pref_player_completionAction_key" android:defaultValue="2" android:entryValues="@array/pref_player_completionAction_entryValues" danmaku:blEntrySummaries="@array/pref_player_completionAction_summaries" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_category_advanced">
        <PreferenceScreen android:title="@string/pref_title_screen_codecPref" android:fragment="tv.danmaku.bili.preferences.BiliPreferencesActivity$CodecPrefFragment" />
        <PreferenceScreen android:title="@string/pref_title_screen_danmakuPref" android:fragment="tv.danmaku.bili.preferences.BiliPreferencesActivity$DanmakuPrefFragment" />
        <PreferenceScreen android:title="@string/pref_title_screen_downloadPref" android:fragment="tv.danmaku.bili.preferences.BiliPreferencesActivity$DownloadPrefFragment" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_category_misc">
        <tv.danmaku.bili.widget.preference.BLListPreference android:persistent="true" android:entries="@array/pref_background_music_notification_style_entries" android:title="@string/pref_title_background_music_notification_style" android:key="@string/pref_background_music_notification_style_key" android:defaultValue="0" android:entryValues="@array/pref_background_music_notification_style_entryValues" danmaku:blEntrySummaries="@array/pref_background_music_notification_style_summaries" />
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_title_landscape_playing" android:key="@string/pref_key_landscape_playing" android:summary="@string/pref_summary_landscape_playing" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_title_hide_navigation" android:key="@string/pref_key_hide_navigation" android:summary="@string/pref_summary_hide_navigation" android:defaultValue="@bool/pref_key_hide_navigation_def_value" />
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_title_disable_splash" android:key="@string/pref_key_disable_splash" android:summary="@string/pref_summary_disable_splash" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_title_disable_push" android:key="@string/pref_key_disable_push" android:summary="@string/pref_summary_disable_push" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_title_resolve_bili_cdn_play" android:key="@string/pref_key_resolve_bili_cdn_play" android:summary="@string/pref_summary_resolve_bili_cdn_play" android:defaultValue="false" />
        <tv.danmaku.bili.widget.preference.custom.BLPreference_ClearImage android:persistent="false" android:title="@string/pref_title_clearImage" />
        <tv.danmaku.bili.widget.preference.custom.BLPreference_ClearSearchHistory android:persistent="false" android:title="@string/pref_title_clearSearchHistory" />
        <tv.danmaku.bili.widget.preference.custom.BLPreference_ResetPreference android:persistent="false" android:title="@string/pref_title_resetPreferences" />
        <Preference android:persistent="false" android:title="@string/pref_title_feed_back" android:key="@string/pref_key_feed_back" android:defaultValue="@null">
            <intent android:targetPackage="@string/package_name" android:action="android.intent.action.VIEW" android:targetClass="com.umeng.fb.HelpActivity" />
        </Preference>
        <PreferenceScreen android:title="@string/pref_title_help_preferences" android:fragment="tv.danmaku.bili.preferences.HelpFragment" />
    </PreferenceCategory>
</PreferenceScreen>