<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_title_help_preferences" android:key="@string/pref_key_help_preferences"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:persistent="false" android:title="@string/pref_title_check_update" android:key="@string/pref_key_check_update" android:defaultValue="@null" />
    <Preference android:persistent="false" android:title="@string/pref_title_cpu_info" android:key="@string/pref_key_cpu_info" android:defaultValue="@null">
        <intent android:targetPackage="@string/package_name" android:action="android.intent.action.VIEW" android:targetClass="tv.danmaku.bili.ui.CpuInfoActivity" />
    </Preference>
    <Preference android:persistent="false" android:title="@string/pref_title_diagnostics" android:key="@string/pref_key_diagnostics" android:defaultValue="@null">
        <intent android:targetPackage="@string/package_name" android:action="android.intent.action.VIEW" android:targetClass="tv.danmaku.bili.ui.test.PingTestActivity" />
    </Preference>
    <Preference android:persistent="false" android:title="@string/pref_title_license" android:key="@string/pref_key_license" android:defaultValue="@null">
        <intent android:targetPackage="@string/package_name" android:action="android.intent.action.VIEW" android:targetClass="tv.danmaku.bili.ui.LicenseActivity" />
    </Preference>
    <Preference android:persistent="false" android:title="@string/pref_title_joinus" android:key="@string/pref_key_joinus" android:summary="@string/pref_summary_joinus" android:defaultValue="@null">
        <intent android:targetPackage="@string/package_name" android:action="android.intent.action.VIEW" android:data="http://www.bilibili.com/html/join.html" android:targetClass="tv.danmaku.bili.ui.webview.MWebActivity" />
    </Preference>
    <Preference android:persistent="false" android:title="@string/pref_title_about" android:key="@string/pref_key_about" android:defaultValue="@null">
        <intent android:targetPackage="@string/package_name" android:action="android.intent.action.VIEW" android:targetClass="tv.danmaku.bili.ui.AboutActivity" />
    </Preference>
</PreferenceScreen>