<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/pref_title_screen_codecPref" android:key="@string/pref_key_screen_codecPref" android:summary="@string/pref_summary_screen_codecPref"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:danmaku="http://schemas.android.com/apk/res-auto">
    <tv.danmaku.bili.widget.RadioGroupPreference android:persistent="true" android:title="@string/pref_title_category_codecMode" android:key="@string/pref_player_codecMode_key" danmaku:radioEntries="@array/pref_player_codecMode_entries" danmaku:radioEntrySummaries="@array/pref_player_codecMode_summaries" danmaku:radioEntryValues="@array/pref_player_codecMode_entryValues" danmaku:radioDefaultValue="0" />
    <PreferenceCategory android:title="@string/pref_title_category_swConfig">
        <tv.danmaku.bili.widget.preference.BLListPreference android:persistent="true" android:entries="@array/pref_player_ffmpegSkipLoopFilter_entries" android:title="@string/pref_title_ffmpegSkipLoopFilter" android:key="@string/pref_player_ffmpegSkipLoopFilter_key" android:defaultValue="0" android:entryValues="@array/pref_player_ffmpegSkipLoopFilter_entryValues" />
        <tv.danmaku.bili.widget.preference.custom.BLListPreference_PlayerVoutSurfaceFormat android:persistent="true" android:entries="@array/pref_player_voutSurfaceFormat_entries" android:title="@string/pref_title_voutSurfaceFormat" android:key="@string/pref_player_voutSurfaceFormat_key" android:defaultValue="0" android:entryValues="@array/pref_player_voutSurfaceFormat_entryValues" danmaku:blEntrySummaries="@array/pref_player_voutSurfaceFormat_entrySummaries" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_category_vout">
        <tv.danmaku.bili.widget.preference.BLListPreference android:persistent="true" android:entries="@array/pref_entries_VoutViewType" android:title="@string/pref_title_VoutViewType" android:key="@string/pref_key_VoutViewType" android:defaultValue="0" android:entryValues="@array/pref_entryValues_VoutViewType" danmaku:blEntrySummaries="@array/pref_entrySummaries_VoutViewType" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_category_aout">
        <tv.danmaku.bili.widget.preference.BLCheckBoxPreference android:persistent="true" android:title="@string/pref_title_aoutOpenSLES" android:key="@string/pref_player_aoutOpenSLES_key" android:summary="@string/pref_summary_aoutOpenSLES" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>