<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/videoplay__control_panel_bkgd_new" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@null"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/options_menu_item_player" android:focusable="true" android:text="@string/Player_option_menu_title_player" style="@style/PlayerOptionsMenuItem" />
    <View style="@style/CommonUnderline" />
    <TextView android:id="@id/options_menu_item_danmaku" android:focusable="true" android:text="@string/Player_option_menu_title_danmaku" style="@style/PlayerOptionsMenuItem" />
    <View style="@style/CommonUnderline" />
    <TextView android:id="@id/options_menu_item_block" android:focusable="true" android:text="@string/Player_option_menu_title_block" style="@style/PlayerOptionsMenuItem" />
    <View android:visibility="gone" style="@style/CommonUnderline" />
    <TextView android:id="@id/options_menu_item_orientation" android:focusable="true" android:visibility="gone" android:text="@string/Player_option_menu_change_screen_orientation" style="@style/PlayerOptionsMenuItem" />
    <View style="@style/CommonUnderline" />
    <TextView android:id="@id/options_menu_item_info" android:focusable="true" android:text="@string/Player_option_menu_title_info" style="@style/PlayerOptionsMenuItem" />
</LinearLayout>