<?xml version="1.0" encoding="utf-8"?>
<tv.danmaku.bili.resizablelayout.ResizableLayout android:id="@id/controller_root" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/ACD_VideoRoot" ResizableLayout:action="move|rotate|scale" ResizableLayout:maxScale="5.0" ResizableLayout:minScale="0.2" ResizableLayout:allowScalePivot="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ResizableLayout="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/danmaku_view" android:background="@android:color/transparent" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="0.0dip" android:contentDescription="@string/ACD_DanmakuView" />
    <ImageView android:id="@id/water_mark" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/ic_watermark_live_small" />
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/buffering_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/ACD_BufferingView">
        <TextView android:textSize="12.0sp" android:textColor="@color/videoplay__video_title_text" android:ellipsize="marquee" android:layout_gravity="center" android:id="@id/buffering_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/VideoView_buffering" android:singleLine="true" android:shadowColor="@color/_bkgd__gray_dark" android:shadowDx="2.0" android:shadowDy="2.0" android:shadowRadius="3.0" android:marqueeRepeatLimit="0" style="@style/PlayerControlBarButton" />
        <ProgressBar android:id="@id/buffering_view" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="60.0dip" android:layout_height="60.0dip" style="?android:attr/progressBarStyleLarge" />
    </LinearLayout>
    <View android:id="@id/controller_underlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/ACD_Underlay" />
    <ViewStub android:id="@id/live_vertical_fullscreen" android:visibility="gone" android:layout="@layout/bili_app_player_framelayout" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <include android:id="@id/controller_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/ACD_ControllerView" layout="@layout/bili_app_player_controller_pink_new" />
    <ViewStub android:id="@id/lock_view" android:visibility="gone" android:layout="@layout/bili_app_player_locker" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/ACD_LockView" />
    <include android:id="@id/preloading_view" android:visibility="gone" android:contentDescription="@string/ACD_PreloadingView" layout="@layout/bili_app_player_preloading" />
    <include layout="@layout/bili_app_player_media_level_bar2" />
</tv.danmaku.bili.resizablelayout.ResizableLayout>